--- a/app/views/urls.erb
+++ b/app/views/urls.erb
@@ -18,7 +18,7 @@
     <div class='url-list'>
       <li><span class='element'>Url:</span> <a href="/urls/<%= url.short %>"><%= url.short %></a></li>
       <li><span class='element'>Click Count:</span> <%= url.click_count %></li>
-      <% unless url.user_id.nil? %>  <%# Is this where I would write a view helper method? %>
+      <% unless url.user_id.nil? %>
         <li><span class='element'>User:</span> <a href="/users/<%= url.user.id %>"><%= url.user.first_name %> <%= url.user.last_name %></a></li>  
       <% end %>
     </div>
